# pdf_translater

./: CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  pdf2png_tree.py  png2pdf_tree.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.test.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  lint.yml
src/: pdf2png_tree.py  png2pdf_tree.py
tests/: test_pdf2png_tree.py  test_png2pdf_tree.py
