# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translater"
version = "0.2.0"
description = "PDF ↔ PNG/JPG converters that mirror the directory structure."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "pillow>=10",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "isort", "mypy"]

[project.scripts]
pdf2png-tree = "pdf2png_tree:main"
png2pdf-tree = "png2pdf_tree:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.isort]
line_length = 100
src_paths = [".", "tests"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
show_error_codes = true
